# challenge

./: architecture.txt  execution_plan.md
devops/challenge-01/: .dockerignore  Dockerfile
devops/challenge-03/: .gitignore  .pre-commit-config.yaml  DEPLOY.md  docker-compose.yml  pyproject.toml
devops/challenge-03/.github/workflows/: ci-cd.yml
devops/challenge-03/docs/: README.md
entregas/challenge-01/: README.md  incident_response.md  qa.md  setup_variable.md
entregas/challenge-01/docs/: PIPELINES.md  README.md  VARIABLES.md  incident_response.md  manual.md  part1.md  qa.md  setup_variable.md
entregas/challenge-01/iac/: apply.fvars.example  main.tf  outputs.tf  variables.tf
entregas/challenge-01/k8s/: deployment.yaml  service.yaml
entregas/challenge-02/: PIPELINES.md  README.md  incident_response.md
entregas/challenge-02/docs/: Checklist.md  PIPELINES.md  VARIABLES.md  incident_response.md  manual.md  qa.md  setup_variable.md
entregas/challenge-02/iac/: .terraform.lock.hcl  apply.fvars.example  main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
entregas/challenge-02/k8s/: api-deployment.yaml  web-deployment.yaml  web-service.yaml
entregas/challenge-03/: .gitignore  PIPELINES.md  setup_variable.md
entregas/challenge-03/app/: .dockerignore  .pre-commit-config.yaml  DEPLOY.md  DEV_FLOW.md  Dockerfile  app.py
entregas/challenge-03/docs/: Checklist.md  PIPELINES.md  README.md  VARIABLES.md  qa.md  (+3 more)
entregas/challenge-04/: Checklist.md  PIPELINES.md  README.md  VARIABLES.md  incident_response.md  main.tf  manual.md  qa.md  setup_variable.md
(+64 files in other folders)
