[tool.poetry]
name = "challenge-03"
version = "0.1.0"
description = ""
authors = ["Equipe DevOps <devops@genesisgenomics.com.br"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.2"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
ruff = "^0.6.8"
pytest = "^8.3.3"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I"]
ignore = ["E501"]
